2006-12-01  Bruno Haible  <bruno@clisp.org>

	* modules/moo-tests: New file.
	* tests/test-moo-aroot.oo.c: New file.
	* tests/test-moo-aroot.oo.h: New file.
	* tests/test-moo-assign.c: New file.
	* tests/test-moo-asub1.oo.c: New file.
	* tests/test-moo-asub1.oo.h: New file.
	* tests/test-moo-root.oo.c: New file.
	* tests/test-moo-root.oo.h: New file.
	* tests/test-moo-sub1.oo.c: New file.
	* tests/test-moo-sub1.oo.h: New file.
	* tests/test-moo-sub2.oo.c: New file.
	* tests/test-moo-sub2.oo.h: New file.
	* Makefile.am (EXTRA_DIST): Add the new files.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	* modules/term-ostream-tests: New file.
	* tests/test-term-ostream.c: New file.
	* tests/test-term-ostream-xterm: New file.
	* tests/test-term-ostream-xterm.out: New file.
	* tests/test-term-ostream-xterm-16color.out: New file.
	* tests/test-term-ostream-xterm-88color.out: New file.
	* tests/test-term-ostream-xterm-256color.out: New file.
	* Makefile.am (EXTRA_DIST): Add the new files.

2006-12-02  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c (term_ostream_create): Recognize also the
	terminal types rxvt[-16color] and konsole[-16color].

2006-12-01  Bruno Haible  <bruno@clisp.org>

	Preserve the hue of bright colors.
	* lib/term-ostream.oo.c (colors_of_common8): New variable.
	(rgb_to_color_common8): Rewritten.
	(colors_of_xterm8): New variable.
	(rgb_to_color_xterm8): Rewritten.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	* lib/term-ostream.oo.c (out_attr_change): Fix typo.

2006-11-30  Bruno Haible  <bruno@clisp.org>

	Add special color support for xterm-16color, xterm-88color,
	xterm-256color.
	* lib/term-ostream.oo.h (term_color_t): Define as int.
	(COLOR_BLACK, COLOR_BLUE, COLOR_GREEN, COLOR_CYAN, COLOR_RED,
	COLOR_MAGENTA, COLOR_YELLOW, COLOR_WHITE): Remove enum items.
	(term_ostream): Add method rgb_to_color.
	* lib/term-ostream.oo.c (rgb_t, hsv_t): New types.
	(rgb_to_hsv, color_distance, nearest_color, color_luminance): New
	functions.