@@ -1,0 +1,21 @@
+Description:
+Information about terminal capabilities.
+
+Files:
+lib/termcap.h
+
+Depends-on:
+termcap
+
+configure.ac:
+
+Makefile.am:
+
+Include:
+
+License:
+LGPL
+
+Maintainer:
+Bruno Haible
+
