@@ -1,5 +1,17 @@
 2006-12-01  Bruno Haible  <bruno@clisp.org>
 
+	* modules/term-ostream: Depend on termcap-h, not termcap.
+	* lib/term-ostream.oo.c: Include termcap.h.
+	(tgetent, tgetnum, tgetflag, tgetstr, tparm, tgoto, tputs): Remove
+	declarations.
+
+	Move termcap function declarations to a header file.
+	* modules/termcap-h: New file.
+	* lib/termcap.h: New file.
+	* Makefile.am (EXTRA_DIST): Add the new files.
+
+2006-12-01  Bruno Haible  <bruno@clisp.org>
+
 	* modules/moo-tests: New file.
 	* tests/test-moo-aroot.oo.c: New file.
 	* tests/test-moo-aroot.oo.h: New file.
